infra/master/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ready-api-prd
  name: ready-api-prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ready-api-prd
  template:
    metadata:
      labels:
        app: ready-api-prd
    spec:
      containers:
        - image: ready-api
          name: ready-api-prd
          - name: NEW_RELIC_LICENSE_KEY
            value: "20514c5485642548162a0416630425feFFFFNRAL"  # Replace with your actual license key
          - name: NEW_RELIC_APP_NAME
            value: "Prd-NR"  # Descriptive name for your application
          - name: NEW_RELIC_ENABLED
            value: "true"  # Enable the agent; set to "false" if you need to disable it temporarily
          - name: NEW_RELIC_NO_CONFIG_FILE
            value: "true"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "124Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: ready-api-prd.vervenet.net
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: ready-api-prd.vervenet.net
            initialDelaySeconds: 5
            periodSeconds: 10
