infra/master/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ready-api-prd
  name: ready-api-prd
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: ready-api-prd
