infra/master/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-prd
  namespace: prd-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ready-api-prd.vervenet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ready-api-prd
            port:
              number: 80
